--- a/package.json
+++ b/package.json
@@ -1,33 +1,15 @@
 {
   "name": "datagate-poc",
-  "version": "0.3.0",
-  "description": "DataGate - PPAP代替セキュアメール転送システム",
+  "version": "1.0.0",
+  "description": "DataGate PPAP Alternative",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "smtp": "node smtp-server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "email",
-    "security",
-    "ppap",
-    "smtp"
-  ],
-  "author": "138data",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.18.2",
-    "nodemailer": "^6.9.7",
-    "multer": "^1.4.5-lts.1",
-    "dotenv": "^16.3.1",
-    "crypto": "^1.0.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "start": "node index.js"
   },
   "engines": {
     "node": ">=14.0.0"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
