--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "node index.js"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   },
   "dependencies": {
     "express": "^4.18.2"
-  }
+  },
+  "devDependencies": {}
 }
