--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "datagate-poc",
   "version": "1.0.0",
   "description": "DataGate PPAP Alternative",
-  "main": "index.js",
+  "main": "api/index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node api/index.js",
+    "dev": "node api/index.js"
   },
   "engines": {
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {}
 }
