--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,17 @@
-{
+﻿{
+  "version": 2,
+  "functions": {
+    "api/upload.js": {
+      "maxDuration": 10
+    },
+    "api/download/[id].js": {
+      "maxDuration": 10
+    }
+  },
   "rewrites": [
     {
-      "source": "/(.*)",
-      "destination": "/api"
+      "source": "/",
+      "destination": "/public/index.html"
     }
   ]
 }
