--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,22 @@
 ﻿{
   "version": 2,
-  "functions": {
-    "api/upload.js": {
-      "maxDuration": 10
-    },
-    "api/download/[id].js": {
-      "maxDuration": 10
-    }
-  },
-  "rewrites": [
+  "routes": [
     {
-      "source": "/",
-      "destination": "/public/index.html"
+      "src": "^/$",
+      "dest": "/public/index.html"
+    },
+    {
+      "src": "^/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "^/public/(.*)",
+      "dest": "/public/$1"
     }
-  ]
+  ],
+  "functions": {
+    "api/*.js": {
+      "maxDuration": 10
+    }
+  }
 }
