Fix: Force static hosting on Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,5 @@
 ﻿{
-  "version": 2,
-  "routes": [
-    {
-      "src": "^/$",
-      "dest": "/public/index.html"
-    },
-    {
-      "src": "^/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": "^/public/(.*)",
-      "dest": "/public/$1"
-    }
-  ],
-  "functions": {
-    "api/*.js": {
-      "maxDuration": 10
-    }
-  }
+  "framework": null,
+  "cleanUrls": true,
+  "trailingSlash": false
 }
