--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 ﻿{
-  "framework": null,
+  "framework": "static",
   "cleanUrls": true,
-  "trailingSlash": false
+  "trailingSlash": false,
+  "routes": [
+    { "src": "^/$", "dest": "/index.html" },
+    { "src": "^/api/(.*)$", "dest": "/api/$1" }
+  ]
 }
