--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
-{
+﻿{
   "rewrites": [
+    {
+      "source": "/api/download/:id",
+      "destination": "/api/download/[id]"
+    },
     {
       "source": "/download/:id",
       "destination": "/download.html"
