Clean up and force redeploy v3.0.0

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 ﻿{
-  "rewrites": [
-    { "source": "/download/:id", "destination": "/download.html" }
-  ]
+  "functions": {
+    "api/index.js": {
+      "maxDuration": 10
+    }
+  }
 }
