--- a/package.json
+++ b/package.json
@@ -1,8 +1,36 @@
 {
   "name": "datagate-poc",
-  "version": "2.0.0",
+  "version": "2.1.0",
+  "description": "DataGate - PPAP離脱セキュアファイル転送システム Phase 2",
+  "main": "api/index.js",
+  "scripts": {
+    "dev": "vercel dev",
+    "deploy": "vercel --prod",
+    "test": "node test-api.js",
+    "setup-kv": "vercel env pull && npm install"
+  },
   "dependencies": {
     "@sendgrid/mail": "^8.1.6",
+    "@vercel/kv": "^2.0.0",
     "multer": "^1.4.5-lts.1"
-  }
+  },
+  "devDependencies": {
+    "vercel": "^32.0.0"
+  },
+  "engines": {
+    "node": ">=18.x"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/138data/datagate-poc"
+  },
+  "keywords": [
+    "ppap",
+    "secure-file-transfer",
+    "otp",
+    "vercel",
+    "kv-storage"
+  ],
+  "author": "138data",
+  "license": "MIT"
 }
