--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "@sendgrid/mail": "^8.1.6",
         "@upstash/redis": "^1.35.4",
         "@vercel/kv": "^2.0.0",
-        "multer": "^1.4.5-lts.1"
+        "multer": "^1.4.5-lts.1",
+        "nodemailer": "^7.0.6"
     },
     "devDependencies": {
         "vercel": "^32.0.0"
