--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 ﻿{
   "name": "datagate-poc",
-  "version": "4.0.0",
+  "version": "4.1.0",
+  "description": "DataGate PPAP Alternative File Transfer System",
+  "main": "api/index.js",
+  "scripts": {
+    "dev": "vercel dev",
+    "build": "echo 'No build required'",
+    "start": "node api/index.js"
+  },
   "dependencies": {
-    "@sendgrid/mail": "^8.1.6",
-    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
