--- a/package.json
+++ b/package.json
@@ -1,17 +1,6 @@
 ﻿{
   "name": "datagate-poc",
-  "version": "4.1.0",
-  "description": "DataGate PPAP Alternative File Transfer System",
-  "main": "api/index.js",
-  "scripts": {
-    "dev": "vercel dev",
-    "build": "echo 'No build required'",
-    "start": "node api/index.js"
-  },
-  "dependencies": {
-    "nodemailer": "^6.9.8"
-  },
-  "engines": {
-    "node": ">=18.x"
-  }
+  "version": "1.0.0",
+  "description": "DataGate POC",
+  "dependencies": {}
 }
