fix: Vercel設定ファイル修正 - BOM問題解決

--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
-﻿{
+{
   "name": "datagate-poc",
-  "version": "1.0.0",
-  "description": "DataGate POC",
-  "dependencies": {}
+  "version": "1.0.0"
 }
