--- a/vercel.json
+++ b/vercel.json
@@ -4,14 +4,18 @@
       "maxDuration": 10
     }
   },
-  "rewrites": [
+  "routes": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
+      "src": "/",
+      "dest": "/index.html"
     },
     {
-      "source": "/(.*)",
-      "destination": "/public/$1"
+      "src": "/download",
+      "dest": "/download.html"
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
     }
   ]
 }
