--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "description": "DataGate PPAP Alternative",
   "dependencies": {
     "nodemailer": "^7.0.6"
+  },
+  "devDependencies": {
+    "dotenv": "^17.2.3"
   }
 }
