Fix: Remove incorrect routes that broke API endpoints

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,8 @@
 {
-  "cleanUrls": true,
-  "trailingSlash": false,
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/public/$1"
+      "source": "/",
+      "destination": "/admin-login.html"
     }
   ],
   "headers": [
