--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   "description": "138DataGate - PPAP離脱ソフト",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vercel dev",
+    "deploy": "vercel --prod"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "file-transfer",
+    "ppap",
+    "security",
+    "encryption"
+  ],
+  "author": "138Data",
   "license": "ISC",
   "dependencies": {
     "@vercel/kv": "^2.0.0",
@@ -16,7 +23,11 @@
     "form-data": "^4.0.1",
     "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.16"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
+    "uuid": "^8.3.2"
   },
-  "type": "module"
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
