--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "138Data",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "@vercel/kv": "^2.0.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
