feat: Implement Vercel Blob Storage for large file support (Phase 34)
- Add lib/blob-storage.js for Blob operations
- Update api/upload.js to store encrypted files in Blob
- Update api/files/download.js to retrieve files from Blob
- Remove KV :data storage (use Blob instead)
- Support files up to 500MB (Blob limit)
- Metadata (salt, iv, authTag) still stored in KV

Breaking changes:
- Old files stored in KV :data will not be accessible
- Requires BLOB_READ_WRITE_TOKEN environment variable

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.6",
+    "@vercel/blob": "^2.0.0",
     "@vercel/kv": "^2.0.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
