--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "form-data": "^4.0.1",
     "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.2",
     "nodemailer": "^6.9.16",
     "uuid": "^8.3.2"
   }
