--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "deploy": "vercel --prod"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.0",
     "@vercel/blob": "^0.24.0",
     "@vercel/kv": "^3.0.0",
-    "@sendgrid/mail": "^8.1.0",
-    "multer": "^2.0.0"
+    "multer": "^2.0.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "vercel": "^39.0.0"
