fix(phase36): make /download.html single source (root), /d rewrite; remove duplicate under /public

--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,21 @@
       "maxDuration": 10
     }
   },
-  "outputDirectory": "."
+  "rewrites": [
+    {
+      "source": "/d",
+      "destination": "/download.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/download.html",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-store"
+        }
+      ]
+    }
+  ]
 }
