--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,12 @@
       "maxDuration": 10
     }
   },
+  "routes": [
+    {
+      "src": "/api/files/download",
+      "dest": "/api/files/download.js"
+    }
+  ],
   "rewrites": [
     {
       "source": "/d",
