chore: .gitignore にバックアップファイルパターンを追加
- *.backup-* (コードバックアップ)
- *.broken-* (破損ファイル)
- *phase*-[0-9]* (Phase テストファイル)
- downloaded-*.txt (テストダウンロード)

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,10 @@ api/test-mail.js
 SENDGRID_API_KEY.txt
 *.key
 *.secret
+
+# Phase backup files
+*.backup-*
+*.broken-*
+*phase*-[0-9]*
+*.utf8fix-*
+downloaded-*.txt
