fix(phase42-p1): Add vercel.json for admin routing
Issue:
- /admin/ returns 404 NOT_FOUND
- static files not served correctly

Solution:
- Add rewrites for /admin and /admin/
- Configure Cache-Control headers for API and HTML

Routing:
- /admin -> /admin/index.html
- /admin/ -> /admin/index.html

Headers:
- API endpoints: Cache-Control: no-store
- HTML files: Cache-Control: no-store

--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,31 @@
-{
+﻿{
   "version": 2,
-  "functions": {
-    "api/**/*.js": {
-      "maxDuration": 10
-    }
-  },
   "rewrites": [
     {
-      "source": "/d",
-      "destination": "/download.html"
+      "source": "/admin",
+      "destination": "/admin/index.html"
+    },
+    {
+      "source": "/admin/",
+      "destination": "/admin/index.html"
     }
   ],
   "headers": [
     {
-      "source": "/download.html",
+      "source": "/api/(.*)",
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "no-store"
+          "value": "no-store, max-age=0"
+        }
+      ]
+    },
+    {
+      "source": "/(.*)\\.html",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-store, max-age=0"
         }
       ]
     }
