--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@sendgrid/mail": "^8.1.6",
     "@vercel/blob": "^0.24.0",
     "@vercel/kv": "^3.0.0",
+    "bcryptjs": "^3.0.3",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2"
   },
   "devDependencies": {
