--- a/package.json
+++ b/package.json
@@ -15,7 +15,25 @@
     "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "next": "^14.2.33",
     "nodemailer": "^6.9.16",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "^24.10.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
+    "typescript": "^5.9.3"
+  },
+  "scripts": {
+    "start": "next start",
+    "dev": "next dev -p 3000",
+    "build": "next build",
+    "lint": "next lint"
   }
 }
