--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "form-data": "^4.0.1",
     "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "next": "^14.2.33",
     "nodemailer": "^6.9.16",
