--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^3.3.0",
+    "swr": "^2.3.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
