fix(phase59): Fix download routing in vercel.json
- Change: /download → /download/:fileId
- Add dynamic fileId parameter
- Route to API endpoint with query parameter
- Fix 404 error on download page

--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,8 @@
       "destination": "/upload.html"
     },
     {
-      "source": "/download",
-      "destination": "/download.html"
+      "source": "/download/:fileId",
+      "destination": "/api/files/download?fileId=:fileId"
     }
   ]
 }
