--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "node": "20.x"
   },
   "dependencies": {
+    "@aws-sdk/client-sesv2": "^3.928.0",
     "@sendgrid/mail": "^8.1.6",
     "@vercel/blob": "^2.0.0",
     "@vercel/kv": "^2.0.0",
@@ -17,7 +18,6 @@
     "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "next": "^14.2.33",
-    "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^3.3.0",
