--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "node": "20.x"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.931.0",
     "@aws-sdk/client-sesv2": "^3.928.0",
+    "@aws-sdk/s3-request-presigner": "^3.931.0",
     "@sendgrid/mail": "^8.1.6",
     "@vercel/blob": "^2.0.0",
     "@vercel/kv": "^2.0.0",
