--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
+    "multiparty": "^4.2.3",
     "next": "^14.2.33",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
