--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "multiparty": "^4.2.3",
     "next": "^14.2.33",
     "nodemailer": "^7.0.10",
+    "pako": "^2.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^3.3.0",
